crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__annotation_interface_members_are_annotation_element_declarations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@interface Contract {
  String value() default "x";

  int[] flags() default { 1, 2 };

  Nested nested() default @Nested;
}

@interface Nested {
}

diagnostics:
(none)
