crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__array_creation_unsized_trailing_dims_have_per_dimension_nodes.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ArrayCreationPerDimensionDims {
  void method() {
    Object values = new String[1];
  }
}

@interface A {
}

@interface B {
}

diagnostics:
(none)
