crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__array_type_dims_have_per_dimension_nodes.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ArrayTypePerDimensionDims {
  String @A [] @B [] names;
}

@interface A {
}

@interface B {
}

diagnostics:
(none)
