crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__catch_clause_has_catch_parameter_boundary.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class CatchParameterShape {
  void method() {
    try {
      risky();
    } catch (final java.io.IOException | RuntimeException ex) {
    }
  }

  void risky() throws java.io.IOException {
  }
}

diagnostics:
(none)
