crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__catch_union_types_have_union_type_nodes.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class CatchUnionTypeShape {
  void method() {
    try {
      risky();
    } catch (java.io.IOException | RuntimeException ex) {
    }
  }

  void risky() throws java.io.IOException {
  }
}

diagnostics:
(none)
