crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__disambiguates_parenthesized_expression_from_reference_cast.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class CastAmbiguity {
  void method(int x, int y) {
    int value = (x) - y;
  }
}

diagnostics:
(none)
