crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__disambiguates_when_in_switch_labels.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SwitchWhenIdentifier {
  void method(int when) {
    switch (when) {
      case when:
        break;
    }
  }
}

diagnostics:
(none)
