crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__instanceof_forms_have_dedicated_expression_nodes.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class InstanceofExpressionShape {
  boolean method(Object value) {
    return value instanceof java.util.List<?> || value instanceof String text;
  }
}

diagnostics:
(none)
