crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__module_import_declarations_expose_structured_module_names.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import module java.base;

class ModuleImportName {
}

diagnostics:
(none)
