crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__normal_annotation_pairs_have_structured_element_value_pairs.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@Normal(name = "test", nested = @Marker, values = { 1, 2 })
class Annotated {
}

@interface Normal {
  String name();

  Marker nested();

  int[] values();
}

@interface Marker {
}

diagnostics:
(none)
