crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__ordinary_import_declarations_expose_structured_names.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import java.util.List;

class OrdinaryImport {
}

diagnostics:
(none)
