crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_annotated_array_dimensions.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class AnnotatedDims {
  String @Marker [] @Marker [] names;
}

@interface Marker {
}

diagnostics:
(none)
